# syncExtHDD

./: .gitignore  LICENSE  README.md  pyproject.toml
syncexthdd/: __init__.py  sync_external_hdd.py
systemd.service/: sync_ext_hdd.service
systemd.system_sleep/: sync_before_sleep.sh
tests/: disks_to_sync.template.json  test_syncexthdd.py
