[tool.poetry]
name = "syncExtHdd"
version = "0.1.0"
description = ""
authors = ["Your Name <manuel.yguel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typeguard = "^4.1.5"
click = "^8.1.7"

[tool.poetry.scripts]
psync = "syncexthdd.sync_external_hdd:main"

[tool.poetry.dev-dependencies]
pytest = ">=7.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
